--- a/style.css
+++ b/style.css
@@ -189,7 +189,7 @@
     box-shadow: 0.25vh 0.25vh 2vh rgba(0, 0, 0, 0.2);
     animation: 2s cubic-bezier(.3,.11,.25,.99) show1;
     transition: cubic-bezier(1, 0, 0, 1) 1s;
-    font-size: 300%;
+    font-size: auto;
     width: 85%;
 }
 
