--- a/style.css
+++ b/style.css
@@ -209,8 +209,8 @@
     justify-content: center;
     align-items: center;
     left: 50%;
-    transform: translate(-50%, 15vh);
-    margin: 2.5vh 0vh;
+    transform: translate(-50%, 500%);
+    margin: auto 0vh;
 }
 
 .crossplate:hover{
