--- a/style.css
+++ b/style.css
@@ -1,5 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&family=Flow+Circular&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Press+Start+2P&family=Tektur:wght@400..900&family=Wix+Madefor+Text:ital,wght@0,400..800;1,400..800&display=swap');
 
+@keyframes animationlogo {
+    from{
+        width: 0vh;
+    }
+    to{
+        width: 20vh;
+    }
+}
+
 @keyframes show1 {
     0%{
         filter: blur(5px);
@@ -194,6 +203,7 @@
     border-style: none;
     cursor: pointer;
     overflow-x: hidden;
+    border-top-right-radius: 0vh;
 }
 
 
@@ -272,6 +282,21 @@
     font-size: 205%;
     box-shadow: 0.25vh 0.25vh 2vh rgba(0, 0, 0, 0.2), 0.5vh 0.5vh rgb(255, 255, 255), 0.5vh 0.5vh 2vh rgba(0, 0, 0, 0.2);
 }
+
+.prmchstva:hover:before {
+    animation: moveLight cubic-bezier(1,0,0,1) 2s;
+}
+
+.prmchstva:before {
+    transform: translateX(-8.5em) skewX(-45deg);
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0%;
+    width: 2em;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.3);
+}   
 
 .crossplate{
     font-family: Anonymous Pro;
@@ -374,6 +399,15 @@
     box-shadow: 0.25vh 0.25vh 2vh rgba(0, 0, 0, 0.2), 0.0vh 0.0vh black, 0.0vh 0.0vh 2vh rgba(0, 0, 0, 0.0);
 }
 
+
+.material-symbols-outlined {
+    font-variation-settings:
+    'FILL' 1,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 40
+}
+
 .buttoncopy:hover{
     box-shadow: 0.25vh 0.25vh 2vh rgba(0, 0, 0, 0.2), 0.5vh 0.5vh rgb(255, 255, 255), 0.5vh 0.5vh 2vh rgba(0, 0, 0, 0.2);
 }
@@ -397,4 +431,159 @@
     font-size: 205%;
     filter: blur(2.5px);
     backdrop-filter: blur(5px);
+}
+
+
+.adding1i3m{
+    font-family: Wix madefor text;
+    font-weight: 700;
+    position: relative;
+    text-align: center;
+    font-size: 5vh;
+    color: rgb(40, 40, 40);
+    text-shadow: 0.25vh 0.25vh 2vh rgba(0, 0, 0, 0.5);
+    transform: translate(0%, -185%);
+    top: 5vh;
+    animation: 4s cubic-bezier(.3,.11,.25,.99) show1;
+}
+
+.adding2i3m{
+    font-family: Wix madefor text;
+    font-weight: 700;
+    position: relative;
+    text-align: center;
+    font-size: 3vh;
+    color: rgb(40, 40, 40);
+    text-shadow: 0.25vh 0.25vh 2vh rgba(0, 0, 0, 0.5);
+    transform: translate(0%, -115%);
+    animation: 5s cubic-bezier(.3,.11,.25,.99) show1;
+}
+
+
+
+.columntxt{
+    position: relative;
+    text-align: center;
+    top: -5vh;
+    color: rgb(40, 40, 40);
+    font-family: Wix madefor text;
+    text-shadow: 0.25vh 0.25vh 2vh rgba(0, 0, 0, 0.5);
+}
+
+.i3m{
+    width: 100%;
+    position: relative;
+    top: 15vh;
+    padding: 20vh 0vh 0vh 0vh;
+    background-color: #cfcfcf;
+    border-radius: 2.5vh;
+    margin: 0vh 0vh 5vh 0vh;
+}
+
+.column1i3m{
+    animation: 6s cubic-bezier(.3,.11,.25,.99) show1;
+}
+
+.column1i3{
+    animation: 7s cubic-bezier(.3,.11,.25,.99) show1;
+}
+
+.column2i3m{
+    animation: 8s cubic-bezier(.3,.11,.25,.99) show1;
+}
+
+.column2i3{
+    animation: 9s cubic-bezier(.3,.11,.25,.99) show1;
+}
+
+.column3i3m{
+    animation: 10s cubic-bezier(.3,.11,.25,.99) show1;
+}
+
+.column3i3{
+    animation: 11s cubic-bezier(.3,.11,.25,.99) show1;
+}
+
+.logo{
+    width: 20vh;
+    position: relative;
+    left: 0%;
+    top: 1.25vh;
+    padding: 0vh 1.5vh;
+    animation: animationlogo 1s cubic-bezier(0.1, 0.7, 0, 1.05);
+}
+
+.text{
+    font-family: Wix madefor text;
+    font-weight: 700;
+    color: #cfcfcf;
+    text-shadow: 0.25vh 0.25vh 2vh rgba(0, 0, 0, 0.5);
+}
+
+.i4mtextone{
+    text-align: center;
+    position: relative;
+    top: 15vh;
+}
+
+.i4mtexttwo{
+    text-align: center;
+    position: relative;
+    top: 15vh;
+}
+
+.prmchstva{
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    left: 50%;
+    transform: translate(-50%, -10%);
+    text-align: center;
+    text-decoration: none;
+    top: 15vh;
+    color: rgb(40, 40, 40);
+    background-color: #cfcfcf;
+    padding: 2vh;
+    text-shadow: 0.25vh 0.25vh 2vh rgba(0, 0, 0, 0.5);
+    box-shadow: 0.25vh 0.25vh 2vh rgba(0, 0, 0, 0.5), 0vh 0vh rgb(0, 0, 0), 0.5vh 0.5vh 2vh rgba(0, 0, 0, 0.2);
+    font-size: 250%;
+    border-radius: 2vh;
+    transition: cubic-bezier(1, 0, 0, 1) 1s;
+    overflow-x: hidden;
+    border-bottom-right-radius: 0vh;
+}
+
+.prmchstva:hover{
+    box-shadow: 0.25vh 0.25vh 2vh rgba(0, 0, 0, 0.2), 0.5vh 0.5vh rgb(255, 255, 255), 0.5vh 0.5vh 2vh rgba(0, 0, 0, 0.2);
+}
+
+.footerlicences{
+    text-align: center;
+    color: #cfcfcf;
+    text-decoration: none;
+    margin: 0vh 2.5vh;
+}
+
+.footertext{
+    text-align: center;
+    color: #cfcfcf;
+    text-decoration: none;
+    margin: 0vh 12.5vh;
+    cursor: pointer;
+}
+
+.footer{
+    font-family: Montserrat;
+    background-color: black;
+    position: relative;
+    left: 50%;
+    transform: translate(-50%, -10%);
+    text-decoration: none;
+    top: 25vh;
+    padding: 2.5vh 0vh 5vh 0vh;
+    color: #cfcfcf;
+    border-radius: 2vh;
+    border-bottom-left-radius: 0vh;
+    border-bottom-right-radius: 0vh;
 }
